# serialK

./: .gitignore  README.md  pyproject.toml
scripts/: demo_conditionals.txt  demo_queue_a.txt  demo_queue_b.txt  se_drift  se_haltAtSurf  se_heading  se_pld_adcp10xtest  se_pld_mr10xtest  se_pld_mr3xtest  se_pld_reset  se_send2dive  se_waypoint  se_wd  se_yo  se_yo200x5  se_yo30  se_yo30x10  se_yo30x3
src/serialk/: __init__.py  __main__.py  cli.py  config.py  console.py  logging.py  script_queue.py  script_runner.py  serial_session.py  simulator.py
tests/: test_config.py  test_logging.py  test_script_queue.py  test_script_runner.py  test_serial_session.py
